# Equipo406_RepositorioP3

IS/: CMakeLists.txt
IS/src/: Actividad.cpp  CMakeLists.txt  a.out  actividades.txt  inscritos.txt  mailing.txt  main-general.cc  registrados.txt
IS/tests/: Actividad.h  CMakeLists.txt  Makefile  test-eliminarusuario.cc  test-existeactividad.cc  test-inscribirusuario.cc  test-pedirdatos.cc  test-registrarusuario.cc
